# popi

./: .editorconfig  .gitignore  Cargo.toml  FUNDING.yml  README.md
.github/actions/rust_ready/: action.yml
.github/workflows/: auto-approve.yml  rust.yml
src/: colors.rs  config.rs  filter.rs  finder.rs  lib.rs  main.rs  main_mode.rs  strings.rs  terminal.rs  terminal_util.rs
src/main_mode/: mod.rs  safe_methods.rs  split_by_matched.rs  worker_cursor_blinker.rs  worker_key_input.rs  worker_keyword_change.rs
tests/: config.rs  finder.rs
tests/fixtures/config_1/: paths.yml
tests/fixtures/filter_1/config/: config.yml
tests/fixtures/repo_search_1/config/: config.yml
tests/fixtures/repo_search_2/config/: config.yml
tests/fixtures/repo_search_3/config/: config.yml
