[package]
name = "popi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
yaml-rust = "0.4"
thiserror = "1.0"
colored = "2.0.0"
async-fs = "1.6.0"
stringmetrics = "2.2.2"
futures = "0.3.28"
tokio = { version = "1.28.2", features = ["full"] }
